fix #25
