# lib/routes/VerifyToken.js
@@ -12,7 +12,7 @@ var apikey_1 = __importDefault(require("../models/apikey"));
  * @param {function} next the function's callback.
  */
 var verifyToken = function (req, res, next) {
-    var token = req.headers['authorization'].substring(7);
+    var token = req.headers['authorization'];
     if (!token)
         return res.status(403).send({ auth: false, message: 'No token provided.' });
     jsonwebtoken_1.default.verify(token, process.env.API_SECRET, function (err, decoded) {
